--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.0",
     "typescript": "^5.0.4"
   },
@@ -23,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.13.0",
     "ts-node": "^10.9.1"
   }
